# sgf

./: LICENSE  README.md  SGF.hs  sgf.cabal  stack-9.6.yaml  stack.yaml
.github/workflows/: haskell.yml
Data/: SGF.hs
Data/SGF/: Kifu.hs  Parse.hs  Types.hs
Data/SGF/Parse/: Encodings.hs  Raw.hs  Util.hs
SGF/: Parse.hs  Types.hs
SGF/Parse/: Encodings.hs  Raw.hs  Util.bak.hs  Util.hs
