name:               sgf
version:            0.1
homepage:           http://www.dmwit.com/sgf
synopsis:           A library for the SGF (Smart Game Format) file format
description:
    This library contains a complete parser for the most recent revision of
    the SGF file format specification.  There is currently support for file
    format 4 only, game 1 (go/igo/weiqi/baduk) only, and the encodings
    latin-1, utf-8, and ascii only.  There are plans to support parsing the
    other game numbers as well as supporting a pretty-printer in future
    releases.
category:           Data
license:            BSD3
license-file:       LICENSE
author:             Daniel Wagner
maintainer:         daniel@wagner-home.com
cabal-version:      >= 1.2
build-type:         Simple

library
    exposed-modules:    Data.SGF
                        Data.SGF.Parse
                        Data.SGF.Types

    build-depends:  base,
                    containers,
                    extensible-exceptions,
                    mtl>=1,
                    time>=1,
                    parsec>=3,
                    split,
                    encoding>=0.6
